--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kaden Zipfel</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto" rel="stylesheet">
 </head>
 <body>
   
+  <!--Header Section-->
+  
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!--Hero Section-->
+  
+  <section class="hero">
+    <div class="background-image"></div>
+    <div class="hero-content">
+      <h1 class="header">Kaden Zipfel</h1>
+    </div>
+  </section>
+  
+  <!--About Section-->
+  
+  <section class="about">
+    <h2>About</h2>
+    <img>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
+    minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+    mollit anim id est laborum.</p>
+  </section>
+  
+  <!--Portfolio Section-->
+  
+  <section class="portfolio">
+    <h2>Portfolio</h2>
+  </section>
+  
+  <!--Contact Section-->
+  
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>If you are interested in working with me, please email me at 
+    <strong>kaden.zipfel@hotmail.com.</strong></p>
+    <p>I will get back to you as soon as possible.</p>
+  </section>
+  
+  <!--Footer Section-->
+  
+  <footer>
+    <p>© Kaden Zipfel 2018</p>
+  </footer>
+  
+  <!-- jQuery CDN -->
+  	<script
+  	  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  	  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  	  crossorigin="anonymous"></script>
+  
+  <!-- Bootstrap JS CDN -->
+  	<script 
+  		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+  		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+  		crossorigin="anonymous"></script>
 </body>
 </html>
