--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <header>
     <nav>
-      <ul>
+      <ul class="text-center">
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -27,7 +27,7 @@
   
   <section class="hero">
     <div class="background-image"></div>
-    <div class="hero-content">
+    <div class="hero-content text-center">
       <h1 class="header">Kaden Zipfel</h1>
     </div>
   </section>
@@ -35,36 +35,44 @@
   <!--About Section-->
   
   <section class="about">
-    <h2>About</h2>
-    <img>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-    minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-    mollit anim id est laborum.</p>
+    <div class="container text-center">
+      <h2>About</h2>
+      <img>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+      mollit anim id est laborum.</p>
+    </div>
   </section>
   
   <!--Portfolio Section-->
   
   <section class="portfolio">
-    <h2>Portfolio</h2>
+    <div class="container text-center">
+      <h2>Portfolio</h2>
+    </div>
   </section>
   
   <!--Contact Section-->
   
   <section class="contact">
-    <h2>Contact</h2>
-    <p>If you are interested in working with me, please email me at 
-    <strong>kaden.zipfel@hotmail.com.</strong></p>
-    <p>I will get back to you as soon as possible.</p>
+    <div class="container text-center">
+      <h2>Contact</h2>
+      <p>If you are interested in working with me, please email me at 
+      <strong>kaden.zipfel@hotmail.com.</strong></p>
+      <p>I will get back to you as soon as possible.</p>
+    </div>
   </section>
   
   <!--Footer Section-->
   
   <footer>
-    <p>© Kaden Zipfel 2018</p>
+    <div class="container">
+      <p>© Kaden Zipfel 2018</p>
+    </div>
   </footer>
   
   <!-- jQuery CDN -->
