--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <header>
     <nav>
-      <ul class="text-center">
+      <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -36,7 +36,7 @@
   
   <section class="about">
     <div class="container text-center">
-      <h2>About</h2>
+      <h2 class="header">About</h2>
       <img>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
@@ -52,7 +52,7 @@
   
   <section class="portfolio">
     <div class="container text-center">
-      <h2>Portfolio</h2>
+      <h2 class="header">Portfolio</h2>
     </div>
   </section>
   
@@ -60,7 +60,7 @@
   
   <section class="contact">
     <div class="container text-center">
-      <h2>Contact</h2>
+      <h2 class="header">Contact</h2>
       <p>If you are interested in working with me, please email me at 
       <strong>kaden.zipfel@hotmail.com.</strong></p>
       <p>I will get back to you as soon as possible.</p>
