--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="hero">
     <div class="background-image"></div>
     <div class="hero-content text-center">
-      <h1 class="header">Kaden Zipfel</h1>
+      <h1 class="header">Kaden Zipfel <span>Web Developer</span></h1>
     </div>
   </section>
   
