Add about styles

--- a/index.html
+++ b/index.html
@@ -37,14 +37,26 @@
   <section class="about">
     <div class="container text-center">
       <h2 class="header">About</h2>
-      <img>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-      mollit anim id est laborum.</p>
+      <div class="thumbnail">
+        <img src="https://pbs.twimg.com/profile_images/890429824237395972/SKYc8Zj-_400x400.jpg">
+      </div>
+      <p<strong>Hello, my name is Kaden.</strong> I am a web developer currently residing
+			in Vancouver, British Columbia. I am offering my web development and 
+			design skills to be able to study full-time to become a software engineer.</p>
+			<p>As far as education goes, due to financial reasons, I have had 
+			to teach myself web development online using websites such as Udemy. 
+			I have taken several courses including but not limited to: HTML, CSS, 
+			Git, Vanilla Javascript, JQuery, NodeJS, AJAX, D3 and SVG; React and JSX; 
+			and Ruby on Rails.</p>
+			<p>With my experience, I am well-versed and confident with front-end 
+			development and continually working towards improving my abilities 
+			with databases, asynchronous code, and general object oriented 
+			programming so that I can become a skilled full-stack developer.</p>
+			<p>My goal is to develop a great understanding of many 
+			forms of programming, everywhere from blockchain programming to 
+			artificial intelligence. Ideally, my career focus would be directing 
+			production of artificial intelligence in a safe, ethical and positive 
+			direction - much like an idol of mine, Elon Musk.</p>
     </div>
   </section>
   
