Add page anchors

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   
   <!--About Section-->
   
+  <!--About Anchor-->
+  <a name="about"></a>
+  <div class="clearfix"></div>
   <section class="about">
     <div class="container text-center">
       <h2 class="header">About</h2>
@@ -62,6 +65,9 @@
   
   <!--Portfolio Section-->
   
+  <!--Portfolio Anchor-->
+  <a name="portfolio"></a>
+  <div class="clearfix"></div>
   <section class="portfolio">
     <div class="container text-center">
       <h2 class="header">Portfolio</h2>
@@ -85,6 +91,9 @@
   
   <!--Contact Section-->
   
+  <!--Contact Anchor-->
+  <a name="contact"></a>
+  <div class="clearfix"></div>
   <section class="contact">
     <div class="container text-center">
       <h2 class="header">Contact</h2>
