--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <section class="portfolio">
     <div class="container text-center">
       <h2 class="header">Portfolio</h2>
+      <p>A small collection of my favorite projects.</p>
       <div class="col-md-8 col-md-offset-2 col-xs-12">
         <a target="__blank" href="https://cannareviews.herokuapp.com/strains">
           <div class="thumbnail">
