--- a/index.html
+++ b/index.html
@@ -40,26 +40,27 @@
   <section class="about">
     <div class="container text-center">
       <h2 class="header">About</h2>
-      <div class="thumbnail">
-        <img src="https://pbs.twimg.com/profile_images/890429824237395972/SKYc8Zj-_400x400.jpg">
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="https://pbs.twimg.com/profile_images/890429824237395972/SKYc8Zj-_400x400.jpg">
+        </div>
       </div>
-      <p<strong>Hello, my name is Kaden.</strong> I am a web developer currently residing
-			in Vancouver, British Columbia. I am offering my web development and 
-			design skills to be able to study full-time to become a software engineer.</p>
-			<p>As far as education goes, due to financial reasons, I have had 
-			to teach myself web development online using websites such as Udemy. 
-			I have taken several courses including but not limited to: HTML, CSS, 
-			Git, Vanilla Javascript, JQuery, NodeJS, AJAX, D3 and SVG; React and JSX; 
-			and Ruby on Rails.</p>
-			<p>With my experience, I am well-versed and confident with front-end 
-			development and continually working towards improving my abilities 
-			with databases, asynchronous code, and general object oriented 
-			programming so that I can become a skilled full-stack developer.</p>
-			<p>My goal is to develop a great understanding of many 
-			forms of programming, everywhere from blockchain programming to 
-			artificial intelligence. Ideally, my career focus would be directing 
-			production of artificial intelligence in a safe, ethical and positive 
-			direction - much like an idol of mine, Elon Musk.</p>
+      <div class="col-md-8">
+        <p><strong>Hello, my name is Kaden.</strong> I am a web developer currently residing
+  			in Vancouver, British Columbia. I am offering my web development and 
+  			design skills to be able to study full-time to become a software engineer.</p>
+  			<p>I have taken several courses including but not limited to: HTML, CSS, 
+  			Git, Vanilla Javascript, JQuery, NodeJS, AJAX, D3 and SVG; React and JSX.</p>
+  			<p>With my experience, I am well-versed and confident with front-end 
+  			development and continually working towards improving my abilities 
+  			with databases, asynchronous code, and general object oriented 
+  			programming so that I can become a skilled full-stack developer.</p>
+  			<p>My goal is to develop a great understanding of many 
+  			forms of programming, everywhere from blockchain programming to 
+  			artificial intelligence. Ideally, my career focus would be directing 
+  			production of artificial intelligence in a safe, ethical and positive 
+  			direction - much like an idol of mine, Elon Musk.</p>
+      </div>
     </div>
   </section>
   
@@ -105,7 +106,7 @@
       <h2 class="header">Contact</h2>
       <p>If you are interested in working with me, please email me at 
       <strong>kaden.zipfel@hotmail.com.</strong></p>
-      <p>I will get back to you as soon as possible.</p>
+      <p>Alternatively, if you are a Canadian resident, you may call or text me at <strong>613-769-7725</strong>.</p>
     </div>
   </section>
   
