--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <a name="about"></a>
   <div class="clearfix"></div>
   <section class="about">
-    <div class="container text-center">
+    <div class="container">
       <h2 class="header">About</h2>
       <div class="col-md-4">
         <div class="thumbnail">
